Solved issues: - Namespace dependencies - Missing link in documentation object - Undocumented objects - Non-standard license specification - Malformed Description field - Imports not declared - Undocumented arguments in documentation - Update install_libraries

--- a/chipvis/vignettes/rna_heatmap_testing.Rmd
+++ b/chipvis/vignettes/rna_heatmap_testing.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(plotly)
 library(Biobase)
 library(chipVis)
-library(iHeatmapR)
+library(iheatmapr)
 options(ucscChromosomeNames=FALSE)
 
 e <- readRDS("~/workspace/BAP1_Data/esetRPKM.RDS")
